--- a/Dockerfile_build
+++ b/Dockerfile_build
@@ -16,8 +16,11 @@ RUN apt-get update && \
     rm -rf /var/lib/apt/lists/*
 
 # Install ragel
-ENV RAGEL_VERSION=6.10
-RUN curl http://www.colm.net/files/ragel/ragel-${RAGEL_VERSION}.tar.gz -O && \
+ENV RAGEL_VERSION=7
+RUN curl https://www.colm.net/files/thurston.asc | gpg --import - && \
+    curl https://www.colm.net/files/ragel/ragel-${RAGEL_VERSION}.tar.gz -O && \
+    curl https://www.colm.net/files/ragel/ragel-${RAGEL_VERSION}.tar.gz.asc -O && \
+    gpg --verify ragel-${RAGEL_VERSION}.tar.gz.asc ragel-${RAGEL_VERSION}.tar.gz && \
     tar -xzf ragel-${RAGEL_VERSION}.tar.gz && \
     cd ragel-${RAGEL_VERSION}/ && \
     ./configure --prefix=/usr/local && \
